--- a/paxosim.html
+++ b/paxosim.html
@@ -1,7 +1,12 @@
 <html>
 	<head>
 		<title>Paxos Simulator</title>
+		<script type="text/javascript" src="./framework.js"></script>
 	</head>
 	<body>
+	<h1>Paxos Simulator</h1>
+<script>
+	console.log("hello world");
+</script>
 	</body>
 </html>
