--- a/paxosim.html
+++ b/paxosim.html
@@ -1,12 +1,16 @@
 <html>
 	<head>
 		<title>Paxos Simulator</title>
+		<script type="text/javascript" src="./minheap.js"></script>
 		<script type="text/javascript" src="./framework.js"></script>
 	</head>
 	<body>
 	<h1>Paxos Simulator</h1>
 <script>
-	console.log("hello world");
+	console.log("paxos simulated simple");
+	context = new Framework();
+	context.initialize();
+
 </script>
 	</body>
 </html>
