--- a/paxosim.html
+++ b/paxosim.html
@@ -10,6 +10,7 @@
 	console.log("paxos simulated simple");
 	context = new Framework();
 	context.initialize();
+	context.run();
 
 </script>
 	</body>
