made workable the case where two proposers propose different proposals

--- a/paxosim.html
+++ b/paxosim.html
@@ -16,7 +16,7 @@
 	        context = new Framework();
 	        context.initialize();
 	        context.nodes[0].needToPropose = true;
-	        //context.nodes[1].needToPropose = true;
+	        context.nodes[1].needToPropose = true;
 	        context.run();
         </script>
 	</body>
