--- a/paxosim.html
+++ b/paxosim.html
@@ -15,8 +15,8 @@
             console.log("paxos simulated simple");
             context = new Framework();
             context.initialize();
-            context.nodes[0].needToPropose = true;
-            context.nodes[1].needToPropose = true;
+            context.nodes[0]._needToPropose = true;
+            context.nodes[1]._needToPropose = true;
             context.run();
         </script>
 	</body>
