made workable the case where nodes may fail

--- a/paxosim.html
+++ b/paxosim.html
@@ -16,7 +16,7 @@
             context = new Framework();
             context.initialize();
             context.nodes[0]._needToPropose = true;
-            context.nodes[1]._needToPropose = true;
+            //context.nodes[1]._needToPropose = true;
             context.run();
         </script>
 	</body>
