add compatibility with multiple browser

--- a/paxosim.html
+++ b/paxosim.html
@@ -18,7 +18,7 @@
             <div class="title">
                     Monitor
             </div>
-            <canvas width="480" height="480" id="canvas"></canvas>
+            <canvas width="480" height="480" id="canvas" onselectstart="return false"></canvas>
         </div>
         <!--<button id="start">Simulate</button>-->
         <div id="menu">
